# rust-on-rv32i

./: Cargo.toml  LICENSE.txt  README.md  hifive1-revb-rom.lscript  hifive1-revb.lscript
.cargo/: config
src/: bin.rs  gpio.rs  lib.rs  main.rs
src/lib/: dio.rs  lib.rs  pmp.rs  rtc.rs  serial.rs  uart.rs
src/lib/fe310/: gpio.rs  interrupt.rs  mod.rs  plic.rs  rtc.rs  uart.rs
