[package]
name = "rust-on-rv32i"
version = "0.0.11"
edition = "2021"
description = "Bare metal port of rust on rv32i target"
license-file = "LICENSE.txt"

readme = "README.md"

repository = "https://github.com/hubbsvtgc/rust-on-rv32i"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hifive1_revb_board"
path = "src/lib.rs"

[[bin]]
name = "rustic-wires"
path = "src/bin.rs"

[dependencies]
