[package]
name = "rust-on-rv32i"
version = "0.0.11"
edition = "2021"
description = "Bare metal port of rust on rv32i target"
license-file = "LICENSE.txt"

readme = "README.md"

repository = "https://github.com/hubbsvtgc/rust-on-rv32i"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fe310"
path = "src/lib.rs"

[[bin]]
name = "led-blink"
path = "src/bin/led-blink.rs"

[[bin]]
name = "uart1-loopback"
path = "src/bin/uart1-loopback.rs"

[dependencies]

[features]
default = ["uart", "gpio"]
uart = []
gpio = []