[package]
name = "rust-on-rv32i"
version = "0.0.13"
edition = "2021"
description = "Bare metal port of rust on rv32i target"
license-file = "LICENSE.txt"

readme = "README.md"

repository = "https://github.com/hubbsvtgc/rust-on-rv32i"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hal"
path = "src/lib/lib.rs"

[[bin]]
name = "led-blink"
path = "src/bin/led-blink.rs"

#[[bin]]
#name = "print"
#path = "src/bin/print.rs"

#[[bin]]
#name = "uart0interrupt"
#path = "src/bin/UartInterrupt.rs"

[dependencies]

[features]
rtc = [] # cargo build --features=rtc
